2004-10-14  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/feedcomponent.py:
	* flumotion/component/http/Makefile.am:
	* flumotion/component/http/http.py:
	* flumotion/component/http/http.xml:

	Separate twisted resources to a separate file, implement
	mount_point and clean up some other things

2004-10-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/client.py:
	* flumotion/common/common.py:
	* flumotion/manager/main.py:
	* flumotion/worker/main.py:
	  put in --version, synchronize options, use lowercase

2004-10-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/Makefile.am:
	* bin/flumotion.in:
	* configure.ac:
	  rename flumotion to flumotion-manager

	* flumotion/test/Makefile.am:
	  fix test

2004-10-14  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/feedcomponent.py:
	* flumotion/component/videotest/videotest.py:
	* flumotion/component/videotest/videotest.xml:
	* flumotion/wizard/enums.py:
	* flumotion/wizard/wizard_step.py:

	Fix videotest fix pattern property. Add a method on feedcomponent
	to get an element from a pipeline.
	
2004-10-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/reference/Makefile.am:
	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/admin/gtk/spyglass.py:
	* flumotion/admin/gtk/videotest.py:
	* flumotion/common/Makefile.am:
	* flumotion/common/config.py:
	* flumotion/common/log.py:
	* flumotion/common/registry.py:
	* flumotion/common/setup.py:
	* flumotion/component/component.py:
	* flumotion/component/http/http.py:
	* flumotion/manager/admin.py:
	* flumotion/manager/component.py:
	* flumotion/manager/main.py:
	* flumotion/manager/manager.py:
	* flumotion/manager/worker.py:
	* flumotion/test/test_log.py:
	* flumotion/test/test_manager.py:
	* flumotion/tester/clientfactory.py:
	* flumotion/tester/httpclient.py:
	* flumotion/utils/Makefile.am:
	* flumotion/utils/log.py:
	* flumotion/utils/reload.py:
	* flumotion/wizard/wizard.py: