@@ -6,7 +6,6 @@
       <property name="port" type="int" required="yes"/>
       <property name="logfile" type="string"/>
       <property name="gst-property" type="xml" multiple="yes"/>
-      <property name="auth" type="string"/>
       <property name="admin-password" type="string"/>
       <property name="maxclients" type="int"/>
       <property name="bouncer" type="string"/>
